--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 button {
-  padding: 23px;
-  font-size: 102px;
-  margin: 6px 33px 0 0;
+  padding: 26px;
+  font-size: 91px;
+  margin: 26px 0px 0px 18px;
   font-family: monospace
 }
 
@@ -11,11 +11,18 @@ p {
   margin: 32px 10px;
 }
 
+span {
+  font-family: monospace;
+  line-height: 57px;
+  padding: 14px;
+  font-size: 36px;
+}
+
 body {
   margin: 58px;
 }
 
 h1 {
   font-family: monospace;
-  font-size: 28px;
+  font-size: 38px;
 }
