--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
-body {
-  font-family: sans-serif;
-  padding: 10px;
-}
 h3 {
   font-weight: bold;
   display: inline-block;
   padding: 0;
   margin: 0;
-}
-.refresh {
-  font-size: 80%;
-  margin-left: 10px;
 }
 .header {
   background: #ECECEC;
@@ -20,29 +12,29 @@ h3 {
   border: 2px solid #ECECEC;
   list-style-type: none;
 }
-li {
-  padding: 10px;
+.suggestions div{
+  padding: 12px;
+  /* width: 200px; */
+  /* margin: 20px; */
 }
-li img {
+.suggestions div img {
   width: 100px;
   height: 100px;
   cursor: pointer;
   border-radius: 12px;
 }
-li .username, li .close {
-  display: inline-block;
-  position: relative;
-  bottom: 15px;
-  left: 5px;
+.suggestions div .username, .suggestions div .close {
   font-size: x-large;
 }
 
-a.close {
-  padding: 0 18px;
+a.username {
 }
 
-a.username {
-  font-size: 31px;
-  font-family: monospace;
-  padding: 0 30px;
+.suggestion {
+  text-align: center;
+}
+
+
+a.refresh {
+  margin: 15px;
 }
